<resources>
    <string name="app_name">Time S2</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="desenvolvido_por_tairo_roberto">desenvolvido por: Tairo Roberto</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="idade">Idade</string>
    <string name="nome">Nome</string>

    <string name="selecione">Selecione o time</string>
    <string name="palmeiras">Palmeiras</string>
    <string name="corinthians">Corinthians</string>
    <string name="sao_paulo">São Paulo</string>
    <string name="santos">Santos</string>
    <string name="ibis">Ibis</string>
    <string name="parabens" formatted="false"> Olá %s Parabéns por torcer pelo %s</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Usuário</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Registrar</string>
    <string name="error_invalid_email">Este email é inválido</string>
    <string name="error_invalid_password">Esta senha é muito curta</string>
    <string name="error_incorrect_password">Esta senha está incorreta</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="permission_rationale">"Permissões de contato são requeridas para auto preenchimento"
    </string>

    <string name="txt_login">Login</string>
    <string name="int_login">Infore o login</string>
    <string name="xt_senha">Senha</string>
    <string name="int_senha">Informe sua senha</string>
    <string name="otao_login">Conectar</string>
    <string name="xt_saudacao">Ola</string>
    <string name="xt_escolha_pizza">Escolha a(s) pizza(s)</string>
    <string name="xt_pizza_atum">Atum</string>
    <string name="xt_pizza_bacon">Bacon</string>
    <string name="xt_pizza_calabresa">Calabresa</string>
    <string name="xt_pizza_mussarela">Mussarela</string>
    <string name="xt_tamanho_pizza">Tamanho da Pizza</string>

    <string name="txt_pizza_pequena">Pequena</string>
    <string name="txt_pizza_media">Média</string>
    <string name="txt_pizza_grande">Grande</string>
    <string name="txt_forma_pagamento">Forma de Pagamento</string>
    <string name="txt_extras">Extras</string>
    <string name="txt_borda_recheada">Borda Recheada</string>
    <string name="txt_recheio_extra">Recheio Extra</string>
    <string name="txt_refrigerante">Refrigerante</string>
    <string name="txt_sobremesa">Sobremesa</string>
    <string name="txt_calcular">Calcular</string>
    <string name="txt_cheque">Cheque</string>
    <string name="txt_cartao">Cartao</string>
    <string name="txt_vr">VR</string>
    <string name="txt_dinheiro">Dinheiro</string>

</resources>
